# LVGL-GUI-Automation

./: CMakeLists.txt  README.md
automatedTests/: CMakeLists.txt  README.adoc  lv_conf.h  mark_err.sh
automatedTests/tests/: test.cpp  testCMD.cpp  testGO.cpp  testIN.cpp  testRO.cpp
docs/: antora.yml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: README.adoc  api.adoc  devs.adoc  index.adoc
exit_alert_schedule/: exit_alert_schedule.c  exit_alert_schedule.h  exit_alert_schedule_gen.c  exit_alert_schedule_gen.h  file_list_gen.cmake  globals.xml  project.xml
exit_alert_schedule/components/: column.xml  column_gen.c  cont_schedule_time.xml  cont_schedule_time_gen.c  cont_schedule_time_gen.h  header.xml  header_gen.c  header_gen.h  row_gen.c  time_setting.xml  time_setting_gen.c  time_setting_gen.h
exit_alert_schedule/components/save_button/: save_button.xml  save_button_gen.c  save_button_gen.h
exit_alert_schedule/fonts/: open_sans_bold_18_data.c  open_sans_bold_20_data.c  open_sans_bold_24_data.c  open_sans_regular_18_data.c  open_sans_semibold_18_data.c  open_sans_semibold_36_data.c
exit_alert_schedule/images/: image_close_data.c  image_left_arrow_data.c  image_up_arrow_data.c
exit_alert_schedule/screens/: screen_exit_schedule.xml  screen_exit_schedule_gen.c  screen_exit_schedule_gen.h  screen_set_time_gen.c  screen_set_time_gen.h
simulator/: .clang-format  CMakeLists.txt  Makefile  lv_conf.h  lv_conf.h_8.3.9  lv_conf.h_9.0.0  lv_conf.h_9.1.0  lv_demo_conf.h  lv_drv_conf.h  main.cpp  mouse_cursor_icon.c  workspace.code-workspace
simulator/.cache/clangd/index/: lv_conf.h.0E298EB338D2E69E.idx  lv_conf.h.C68BABB0662715A8.idx
test/: Manual tests.xlsx
tools/: LVGLImage.py  README.md  nkdConverter.py  requirements.txt  vstoneDisplayTestScript.py
ui/: CMakeLists.txt  README.md  partitions.csv  sketch.yaml  ui.code-workspace  ui.ino  ui.sublime-project
ui/include/: ModulesFT3267.tpp  TouchLib.h  TouchLibCommon.tpp  TouchLibInterface.hpp  api.h  app.h  assign_room.h  backlight.h  device_info.h  device_status.h  disp_state.h  display.h  exit_alert_schedule.h  fonts.h  images.h  json_handles.h  json_response.h  jsonrpc2.h  lv_conf.h  palette.h  resp_state.h  screens.h  sys_state.h  touch.h  ui.h  virc.h  widgets.h
ui/src/: TouchLibInterface.cpp  api.cpp  app.cpp  backlight.cpp  device_info.cpp  device_status.cpp  disp_state.cpp  display.cpp  exit_alert_schedule.c  json_handles.cpp  json_response.cpp  json_response_handle.cpp  jsonrpc2.cpp  os.cpp  sys_state.cpp  touch.cpp  virc.cpp
ui/src/fonts/: opensans_bold_18.c  opensans_bold_20.c  opensans_bold_24.c  opensans_bold_28.c  opensans_bold_32.c  opensans_bold_40.c  opensans_bold_70.c  opensans_italic_14.c  opensans_italic_16.c  opensans_italic_18.c  opensans_medium_20.c  opensans_regular_14.c  opensans_regular_15.c  opensans_regular_16.c  opensans_regular_18.c  opensans_regular_20.c  opensans_regular_26.c  opensans_regular_28.c  opensans_semibold_18.c  opensans_semibold_19.c  opensans_semibold_20.c  opensans_semibold_24.c  opensans_semibold_28.c  opensans_semibold_36.c  opensans_semibold_48.c  readme.txt
ui/src/images/: backspace_symbol.c  icon_activating.c  icon_alert_90.c  icon_arrow.c  icon_assigning_room.c  icon_badge_bed.c  icon_badge_chair.c  icon_badge_close.c  icon_badge_comp_disconnected.c  icon_badge_fall_detected.c  icon_badge_gen_alert.c  icon_badge_gen_error.c  icon_badge_incorrect_mode.c  icon_badge_obstruct.c  icon_badge_reposition.c  icon_badge_sensor_disconnected.c  icon_badge_sunlight.c  icon_badge_unassigned.c  icon_bed.c  icon_bed_placement_center.c  icon_bed_placement_left_wall.c  icon_bed_placement_right_wall.c  icon_bed_width_custom.c  icon_bed_width_standard.c  icon_bed_width_wide.c  icon_bms_high.c  icon_bms_low.c  icon_bms_uhigh.c  icon_calib_3dots.c  icon_calib_chair_with_dots.c  icon_calibrating_chair.c  icon_calibration_dot.c  icon_call.c  icon_chair.c  icon_check.c  icon_close.c  icon_computer_disconnected.c  icon_cross.c  icon_cross_circle.c  icon_deactivate.c  (+43 more)
ui/src/screens/: activating.cpp  assign_confirm_room.cpp  bed_width_cutom_value.c  bed_width_selection.cpp  deactivating.c  home_active.cpp  home_inactive.cpp  lang_selection.cpp  read_only_screen.cpp  room_selection.cpp  room_view_check.cpp  screen_settings_exit_alert_sch.cpp  screen_settings_time_picker.cpp  settings_alerts.cpp  settings_audio.cpp  settings_bed_placement.cpp  settings_bed_width.cpp  settings_bms.cpp  settings_common.cpp  settings_display.cpp  settings_home.cpp  settings_occupant_size.cpp  system_info.cpp  tmpl_settings_1.cpp  tmpl_transient.c  variant_notset_screen.c
ui/src/widgets/: btn.cpp  btn_save_1.cpp  btnm_mode.cpp  btnm_pause.c  level_bms.c  msgbox.c  radio_selector_1.c  spinner_for_btn.c  status_panel.cpp  time_picker.c  time_setting_widget.c  toast.c  toast_alert.cpp  toast_firmware.c
ui/xml/: bedwidth_value_settings.xml  cont_schedule_time.xml  globals.xml  header.xml  save_button.xml  screen_exit_schedule.xml  screen_set_time.xml  time_setting.xml
